objects/Trail__c.object
<CustomObject>
    <description>A walking/hiking trail.</description>
    <fields>
        <fullName>Description__c</fullName>
        <description>A description of the trail.</description>
        <inlineHelpText>Enter any defining details about the trail.</inlineHelpText>
        <label>Description</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Distance__c</fullName>
        <description>The distance or length of the trail</description>
        <inlineHelpText>How long is the trail?</inlineHelpText>
        <label>Distance</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Last_Inspection_Date__c</fullName>
        <description>The date the trail was last inspected.</description>
        <inlineHelpText>When was the trail last inspected?</inlineHelpText>
        <label>Last Inspection Date</label>
        <type>Date</type>
    </fields>
    <label>Trail</label>
    <nameField>
        <label>Trail Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Trails</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>